Bug 773469 - Remove unnecessary layer transactions when using async-video. r=roc